fix(profile): profile-header spacing

--- a/src/pages/Profile.scss
+++ b/src/pages/Profile.scss
@@ -11,6 +11,7 @@
     flex-direction: column;
     align-items: center;
     gap: $spacing-xl;
+    margin-top: $spacing-xl;
 
     &-picture {
       width: 20rem;
